--- a/composer.json
+++ b/composer.json
@@ -15,8 +15,15 @@
             "LaravelersAcademy\\ZoomMeeting\\": "src/"
         }
     },
+    "autoload-dev": {
+        "psr-4": {
+            "LaravelersAcademy\\ZoomMeeting\\Tests\\": "tests/"
+        }
+    },
     "require-dev": {
-        "orchestra/testbench": "8.x-dev"
+        "orchestra/testbench": "^7",
+        "phpunit/phpunit": "^9",
+        "guzzlehttp/guzzle": "^7"
     },
     "extra": {
         "laravel": {
