--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -25,3 +25,6 @@ jobs:
 
     - name: Run tests
       run: vendor/bin/phpunit
+
+    - name: Verify PHPUnit configuration
+      run: vendor/bin/phpunit --version
