--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -27,4 +27,4 @@ jobs:
       run: vendor/bin/phpunit
 
     - name: Verify PHPUnit configuration
-      run: vendor/bin/phpunit --version --configuration phpunit.xml
+      run: vendor/bin/phpunit --version --configuration /home/runner/work/275-zoom-meeting/275-zoom-meeting/phpunit.xml
